Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-87227

Tooltips are not working

XMLWordPrintable

    • WebAssembly
    • d91edd21d6a91eb50077e9e770b3646de8412669 (qt/qtbase/dev) 7e7e12be9f2e0e3b08d23dafcf8a94d73fa34caf (qt/tqtc-qtbase/tqtc/lts-5.15)

      Tooltips work on all platforms, but WebAssembly. Please fix.

        For Gerrit Dashboard: QTBUG-87227
        # Subject Branch Project Status CR V

            lpotter Lorn Potter
            alexj Alexander Jährling
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes