wasm: fix showing tooltips

Change-Id: I4c82ccc2bfa1019ef105ccf20982786097c126b9
Fixes: QTBUG-87227
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>
(cherry picked from commit d91edd21d6a91eb50077e9e770b3646de8412669)